--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=10">
+  <link rel="stylesheet" href="./style.css?v=12">
 </head>
 <body class="page-enter theme-home">
   <canvas id="starfield" aria-hidden="true"></canvas>
 
   <header class="navbar">
-    <a class="logo" href="index.html" aria-label="Home">
-      <h1>Saimn Zuhairi</h1>
-    </a>
+    <a class="logo" href="index.html" aria-label="Home"><h1>Saimn Zuhairi</h1></a>
     <nav>
       <a href="index.html" class="active">Home</a>
       <a href="projects.html">Projects</a>
@@ -25,10 +23,9 @@
     <section id="about" class="about-section">
       <img class="profile-img"
            src="images/linkedin.jpg"
-           alt="Profile photo of Saimn Zuhairi"
+           alt="Profile photo"
            width="400" height="400"
-           loading="eager"
-           fetchpriority="high">
+           loading="eager" fetchpriority="high">
       <div class="about-text">
         <h2>About Me</h2>
         <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer focusing on flight dynamics, control systems and embedded systems. I work on simulation and physical prototyping (Python, sensors, lightweight mechanisms) and CAD-driven designs. I’m actively seeking internships and entry-level roles — <a href="contact.html">get in touch</a>.</p>
@@ -38,19 +35,23 @@
     <h2>Design Sketches (open a project to view full sets)</h2>
     <section class="sketch-thumbs">
       <a href="projects/gravity-powered-car.html" class="thumb-link">
-        <img src="images/sketch1.jpg" alt="Sketch 1" width="480" height="320" loading="lazy" decoding="async">
+        <img src="images/sketch1.jpg" alt="Gravity car concept sketch"
+             width="480" height="320" loading="lazy" decoding="async">
         <span>Gravity car — concept</span>
       </a>
       <a href="projects/gravity-powered-car.html" class="thumb-link">
-        <img src="images/sketch2.jpg" alt="Sketch 2 ballast cavity" width="480" height="320" loading="lazy" decoding="async">
+        <img src="images/sketch2.jpg" alt="Ballast cavity sketch"
+             width="480" height="320" loading="lazy" decoding="async">
         <span>Ballast cavity</span>
       </a>
       <a href="projects/flight-path-simulation.html" class="thumb-link">
-        <img src="images/fuelplot.png" alt="Fuel flow plot" width="940" height="559" loading="lazy" decoding="async">
+        <img src="images/fuelplot.png" alt="Fuel flow plot"
+             width="940" height="559" loading="lazy" decoding="async">
         <span>Fuel flow plot</span>
       </a>
       <a href="projects/portfolio-website.html" class="thumb-link">
-        <img src="images/sketch3.jpg" alt="Portfolio sketch" width="480" height="320" loading="lazy" decoding="async">
+        <img src="images/sketch3.jpg" alt="Portfolio sketch"
+             width="480" height="320" loading="lazy" decoding="async">
         <span>Portfolio sketch</span>
       </a>
     </section>
@@ -58,13 +59,12 @@
     <h2>Engineering & Aerospace Projects</h2>
     <div class="project-grid">
       <article class="project-card">
-        <a href="projects/gravity-powered-car.html">
-          <img
-            src="images/gravity-prototype.jpg"
-            alt="Gravity car prototype (wooden build)"
-            width="768" height="768"
-            loading="lazy" decoding="async"
-            onerror="this.onerror=null; this.src='images/sketch1.jpg';">
+        <a class="card-img" href="projects/gravity-powered-car.html">
+          <img src="images/gravity-prototype.jpg"
+               alt="Gravity car wooden prototype"
+               width="768" height="768"
+               loading="lazy" decoding="async"
+               onerror="this.onerror=null; this.src='images/sketch1.jpg';">
         </a>
         <h3><a href="projects/gravity-powered-car.html">Gravity-Powered Car (Recycled Materials)</a></h3>
         <p>Prototype for testing mass distribution and rolling resistance; includes sketches and a physical build.</p>
@@ -72,30 +72,28 @@
       </article>
 
       <article class="project-card">
-        <a href="projects/flight-path-simulation.html">
-          <img
-            src="images/aircraft.jpg"
-            alt="Aircraft representing flight dynamics simulation"
-            width="317" height="159"
-            loading="lazy" decoding="async"
-            onerror="this.onerror=null; this.src='images/fuelplot2.png';">
+        <a class="card-img" href="projects/flight-path-simulation.html">
+          <img src="images/aircraft.jpg"
+               alt="Aircraft representing simulation"
+               width="317" height="159"
+               loading="lazy" decoding="async"
+               onerror="this.onerror=null; this.src='images/fuelplot.png';">
         </a>
         <h3><a href="projects/flight-path-simulation.html">Flight Path Simulation (Python)</a></h3>
-        <p>RK4 integration + PID experiments for altitude and heading; wind and fuel-flow analysis.</p>
+        <p>RK4 integration + PID experiments for altitude and heading; wind & fuel-flow analysis.</p>
         <a class="btn small" href="projects/flight-path-simulation.html">View details</a>
       </article>
 
       <article class="project-card">
-        <a href="projects/portfolio-website.html">
-          <img
-            src="images/project3.svg"
-            alt="Portfolio website layout"
-            width="800" height="480"
-            loading="lazy" decoding="async"
-            onerror="this.onerror=null; this.src='images/sketch3.jpg';">
+        <a class="card-img" href="projects/portfolio-website.html">
+          <img src="images/portfolio-code.png"
+               alt="Code screenshot of portfolio"
+               width="1500" height="900"
+               loading="lazy" decoding="async"
+               onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
         </a>
         <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
-        <p>Static, accessible implementation; light JS enhancements and performance-conscious design.</p>
+        <p>Static, accessible implementation; performance-conscious design and lightweight JS.</p>
         <a class="btn small" href="projects/portfolio-website.html">View details</a>
       </article>
     </div>
