--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=11">
+  <link rel="stylesheet" href="./style.css?v=12">
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -25,7 +25,7 @@
 
     <div class="project-grid">
       <article class="project-card">
-        <a href="projects/gravity-powered-car.html">
+        <a class="card-img" href="projects/gravity-powered-car.html">
           <img
             src="images/gravity-prototype.jpg"
             alt="Gravity car wooden prototype"
@@ -38,7 +38,7 @@
       </article>
 
       <article class="project-card">
-        <a href="projects/flight-path-simulation.html">
+        <a class="card-img" href="projects/flight-path-simulation.html">
           <img
             src="images/aircraft.jpg"
             alt="Aircraft used to depict flight path dynamics"
@@ -51,13 +51,13 @@
       </article>
 
       <article class="project-card">
-        <a href="projects/portfolio-website.html">
+        <a class="card-img" href="projects/portfolio-website.html">
           <img
-            src="images/project3.svg"
-            alt="Portfolio site mock"
-            width="800" height="480"
+            src="images/portfolio-code.png"
+            alt="Portfolio website code screenshot"
+            width="1500" height="900"
             loading="lazy" decoding="async"
-            onerror="this.onerror=null; this.src='images/sketch3.jpg';">
+            onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
         </a>
         <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
         <p>Static accessible design with performance-focused JS for subtle animations.</p>
