--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=12">
+  <link rel="stylesheet" href="./style.css?v=13">
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -53,7 +53,7 @@
       <article class="project-card">
         <a class="card-img" href="projects/portfolio-website.html">
           <img
-            src="images/portfolio-code.png"
+            src="images/portfolio-code.png?v=1"
             alt="Portfolio website code screenshot"
             width="1500" height="900"
             loading="lazy" decoding="async"
