--- a/projects/portfolio-website.html
+++ b/projects/portfolio-website.html
@@ -4,12 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portfolio Website — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=12">
-  <style>
-    .dual-thumb{display:grid;grid-template-columns:1fr 1fr;gap:10px;width:100%}
-    .dual-thumb img{width:100%;height:160px;object-fit:cover;border-radius:6px;background:#0d2233}
-    @media (max-width:640px){ .dual-thumb{grid-template-columns:1fr} .dual-thumb img{height:130px} }
-  </style>
+  <link rel="stylesheet" href="../style.css?v=13">
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -35,8 +30,9 @@
         <figcaption>Design sketch outlining layout sections and navigation.</figcaption>
       </figure>
 
+      <!-- Only the code image remains as the main media -->
       <figure>
-        <img src="../images/portfolio-code.png" alt="Code screenshot of the portfolio site"
+        <img src="../images/portfolio-code.png?v=1" alt="Code screenshot of the portfolio site"
              width="1500" height="900" loading="lazy" decoding="async"
              data-caption="Code snapshot (HTML/CSS/JS) for this site."
              onerror="this.onerror=null; this.src='../images/repo-dashboard.png'; this.alt='Repository dashboard showing deployments & language stats'; this.dataset.caption='Repository dashboard (deployments & language split).';">
