--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=13">
+  <link rel="stylesheet" href="./style.css?v=14">
+  <style>
+    /* Card as single anchor */
+    .project-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:16px}
+    a.project-card{display:flex;flex-direction:column;gap:10px;background:var(--card);padding:16px;border-radius:10px;
+      text-decoration:none;color:var(--text);min-height:260px;transition:background .2s}
+    a.project-card:hover{background:rgba(255,255,255,0.06)}
+    a.project-card img{width:100%;height:160px;object-fit:cover;border-radius:6px;background:#071420;display:block}
+    a.project-card h3{margin:0;font-size:1.05rem;color:var(--accent)}
+    a.project-card p{margin:0;font-size:.85rem;line-height:1.3}
+  </style>
 </head>
 <body class="page-enter theme-home">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -20,48 +30,56 @@
   </header>
 
   <main class="section">
-    <!-- About + sketches unchanged -->
+    <section id="about" class="about-section">
+      <img class="profile-img" src="images/linkedin.jpg" alt="Profile photo" width="400" height="400" loading="eager" fetchpriority="high">
+      <div class="about-text">
+        <h2>About Me</h2>
+        <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer focusing on flight dynamics, control systems and embedded systems. I work on simulation and physical prototyping (Python, sensors, lightweight mechanisms) and CAD-driven designs. I’m actively seeking internships and entry-level roles — <a href="contact.html">get in touch</a>.</p>
+      </div>
+    </section>
+
+    <h2>Design Sketches (open a project for full sets)</h2>
+    <section class="sketch-thumbs">
+      <a href="projects/gravity-powered-car.html" class="thumb-link">
+        <img src="images/sketch1.jpg" alt="Gravity car concept sketch" width="480" height="320" loading="lazy" decoding="async">
+        <span>Gravity car — concept</span>
+      </a>
+      <a href="projects/gravity-powered-car.html" class="thumb-link">
+        <img src="images/sketch2.jpg" alt="Ballast cavity sketch" width="480" height="320" loading="lazy" decoding="async">
+        <span>Ballast cavity</span>
+      </a>
+      <a href="projects/flight-path-simulation.html" class="thumb-link">
+        <img src="images/fuelplot.png" alt="Fuel flow plot" width="940" height="559" loading="lazy" decoding="async">
+        <span>Fuel flow plot</span>
+      </a>
+      <a href="projects/portfolio-website.html" class="thumb-link">
+        <img src="images/sketch3.jpg" alt="Portfolio sketch" width="480" height="320" loading="lazy" decoding="async">
+        <span>Portfolio sketch</span>
+      </a>
+    </section>
 
     <h2>Engineering & Aerospace Projects</h2>
     <div class="project-grid">
-      <article class="project-card">
-        <a class="card-img" href="projects/gravity-powered-car.html">
-          <img src="images/gravity-prototype.jpg"
-               alt="Gravity car wooden prototype"
-               width="768" height="768"
-               loading="lazy" decoding="async"
-               onerror="this.onerror=null; this.src='images/sketch1.jpg';">
-        </a>
-        <h3><a href="projects/gravity-powered-car.html">Gravity-Powered Car (Recycled Materials)</a></h3>
-        <p>Prototype for testing mass distribution and rolling resistance; includes sketches and a physical build.</p>
-        <a class="btn small" href="projects/gravity-powered-car.html">View details</a>
-      </article>
+      <a class="project-card" href="projects/gravity-powered-car.html" data-project="gravity">
+        <img src="images/gravity-prototype.jpg" alt="Gravity car prototype" width="768" height="768"
+             loading="lazy" decoding="async" onerror="this.onerror=null; this.src='images/sketch1.jpg';">
+        <h3>Gravity-Powered Car (Recycled Materials)</h3>
+        <p>Prototype exploring mass distribution & rolling resistance; includes physical build and sketches.</p>
+      </a>
 
-      <article class="project-card">
-        <a class="card-img" href="projects/flight-path-simulation.html">
-          <img src="images/aircraft.jpg"
-               alt="Aircraft representing simulation"
-               width="317" height="159"
-               loading="lazy" decoding="async"
-               onerror="this.onerror=null; this.src='images/fuelplot.png';">
-        </a>
-        <h3><a href="projects/flight-path-simulation.html">Flight Path Simulation (Python)</a></h3>
-        <p>RK4 integration + PID experiments for altitude and heading; wind & fuel-flow analysis.</p>
-        <a class="btn small" href="projects/flight-path-simulation.html">View details</a>
-      </article>
+      <a class="project-card" href="projects/flight-path-simulation.html" data-project="flight">
+        <img src="images/aircraft.jpg" alt="Aircraft for simulation context" width="317" height="159"
+             loading="lazy" decoding="async" onerror="this.onerror=null; this.src='images/fuelplot.png';">
+        <h3>Flight Path Simulation (Python)</h3>
+        <p>RK4 integration + PID altitude/heading experiments with wind & fuel-flow plots.</p>
+      </a>
 
-      <article class="project-card">
-        <a class="card-img" href="projects/portfolio-website.html">
-          <img src="images/portfolio-code.png?v=1"
-               alt="Code screenshot of portfolio"
-               width="1500" height="900"
-               loading="lazy" decoding="async"
-               onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
-        </a>
-        <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
-        <p>Static, accessible implementation; performance-conscious design and lightweight JS.</p>
-        <a class="btn small" href="projects/portfolio-website.html">View details</a>
-      </article>
+      <a class="project-card" href="projects/portfolio-website.html" data-project="portfolio">
+        <img src="images/portfolio-code.png?v=2" alt="Portfolio site code screenshot" width="1500" height="900"
+             loading="lazy" decoding="async" onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
+        <h3>Responsive Portfolio Website</h3>
+        <p>Static, accessible site implementation with performance-conscious design choices.</p>
+      </a>
     </div>
 
     <h2 style="margin-top:48px;">Latest GitHub Repositories</h2>
