--- a/projects/gravity-powered-car.html
+++ b/projects/gravity-powered-car.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gravity-Powered Car — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=12">
+  <link rel="stylesheet" href="../style.css?v=14">
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -24,24 +24,20 @@
 
     <section class="project-media">
       <figure>
-        <img src="../images/gravity-prototype.jpg"
-             alt="Wooden gravity car prototype"
-             width="768" height="768"
-             loading="lazy" decoding="async"
-             onerror="this.onerror=null; this.src='../images/sketch1.jpg';"
-             data-caption="Prototype build used for friction tests.">
+        <img src="../images/gravity-prototype.jpg" alt="Wooden gravity car prototype"
+             width="768" height="768" loading="lazy" decoding="async"
+             data-caption="Prototype build used for friction tests."
+             onerror="this.onerror=null; this.src='../images/sketch1.jpg';">
         <figcaption>Prototype build used for friction tests.</figcaption>
       </figure>
       <figure>
-        <img src="../images/sketch1.jpg" alt="Concept sketch views"
-             width="1200" height="800" loading="lazy" decoding="async"
-             data-caption="Sketch 1 — concept views.">
+        <img src="../images/sketch1.jpg" alt="Concept sketch views" width="1200" height="800"
+             loading="lazy" decoding="async" data-caption="Sketch 1 — concept views.">
         <figcaption>Sketch 1 — concept views.</figcaption>
       </figure>
       <figure>
-        <img src="../images/sketch2.jpg" alt="Ballast cavity sketch"
-             width="1200" height="800" loading="lazy" decoding="async"
-             data-caption="Sketch 2 — ballast cavity.">
+        <img src="../images/sketch2.jpg" alt="Ballast cavity sketch" width="1200" height="800"
+             loading="lazy" decoding="async" data-caption="Sketch 2 — ballast cavity.">
         <figcaption>Sketch 2 — ballast cavity.</figcaption>
       </figure>
     </section>
@@ -52,7 +48,7 @@
       <h3>Materials & fabrication</h3>
       <ul>
         <li>Body: recycled wood / foam variants.</li>
-        <li>Wheels: simple discs; future upgrade to bearings.</li>
+        <li>Wheels: simple discs; planned bearing upgrade.</li>
         <li>Ballast: adjustable internal mass.</li>
       </ul>
       <h3>Measurements & results</h3>
