--- a/projects.html
+++ b/projects.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Projects — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=14">
+  <link rel="stylesheet" href="./style.css?v=15">
   <style>
     .project-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:16px}
     a.project-card{display:flex;flex-direction:column;gap:10px;background:var(--card);padding:16px;border-radius:10px;
@@ -17,7 +17,6 @@
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
-
   <header class="navbar">
     <a class="logo" href="index.html" aria-label="Home"><h1>Saimn Zuhairi</h1></a>
     <nav>
@@ -34,22 +33,22 @@
 
     <div class="project-grid">
       <a class="project-card" href="projects/gravity-powered-car.html" data-project="gravity">
-        <img src="images/gravity-prototype.jpg" alt="Gravity car wooden prototype" width="768" height="768"
-             loading="lazy" decoding="async" onerror="this.onerror=null; this.src='images/sketch1.jpg';">
+        <img src="images/gravity-prototype.jpg" alt="Gravity car wooden prototype" width="768" height="768" loading="lazy"
+             onerror="this.onerror=null; this.src='images/sketch1.jpg';">
         <h3>Gravity-Powered Car (Recycled Materials)</h3>
-        <p>Physical prototype + conceptual sketches exploring friction and mass distribution.</p>
+        <p>Physical prototype + conceptual sketches exploring friction & mass distribution.</p>
       </a>
 
       <a class="project-card" href="projects/flight-path-simulation.html" data-project="flight">
-        <img src="images/aircraft.jpg" alt="Aircraft representing simulation" width="317" height="159"
-             loading="lazy" decoding="async" onerror="this.onerror=null; this.src='images/fuelplot.png';">
+        <img src="images/aircraft.jpg" alt="Aircraft representing simulation" width="317" height="159" loading="lazy"
+             onerror="this.onerror=null; this.src='images/fuelplot.png';">
         <h3>Flight Path Simulation (Python)</h3>
-        <p>Numerical integration model: wind sensitivity, fuel-flow plots and PID control trials.</p>
+        <p>Numerical integration model: wind sensitivity, fuel-flow plots & PID trials.</p>
       </a>
 
       <a class="project-card" href="projects/portfolio-website.html" data-project="portfolio">
-        <img src="images/portfolio-code.png?v=2" alt="Portfolio website code screenshot" width="1500" height="900"
-             loading="lazy" decoding="async" onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
+        <img src="images/portfolio-code.png?v=3" alt="Portfolio website code screenshot" width="1500" height="900" loading="lazy"
+             onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
         <h3>Responsive Portfolio Website</h3>
         <p>Static accessible design with performance-focused JS for subtle animations.</p>
       </a>
