--- a/projects/gravity-powered-car.html
+++ b/projects/gravity-powered-car.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Gravity-Powered Car — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=14">
+  <link rel="stylesheet" href="../style.css?v=15">
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
-
   <header class="navbar">
     <a class="logo" href="../index.html" aria-label="Home"><h1>Saimn Zuhairi</h1></a>
     <nav>
@@ -48,7 +47,7 @@
       <h3>Materials & fabrication</h3>
       <ul>
         <li>Body: recycled wood / foam variants.</li>
-        <li>Wheels: simple discs; planned bearing upgrade.</li>
+        <li>Wheels: discs; future bearing upgrade.</li>
         <li>Ballast: adjustable internal mass.</li>
       </ul>
       <h3>Measurements & results</h3>
